--- a/www/template/rates.html
+++ b/www/template/rates.html
@@ -8,14 +8,14 @@
   <div class="panel panel-body survey-list" style="margin-top: -15px;">
     <ul>
       <li ng-repeat="survey in surveys | filter:surveyName">
-          <a ng-if="survey.is_viewed === '0'"
+          <a ng-if="survey.is_answered == '0' && survey.canBeAnswered"
              ng-click="nextLocation(event.id + baseURL.RATESHREF + '/' + survey.id, 'survey', survey)"
              class="container-fluid">
               <h4 class="row">
                 ~ survey.name ~
               </h4>
           </a>
-          <a ng-if="survey.is_viewed === '1'"
+          <a ng-if="survey.is_answered == '1' || !survey.canBeAnswered"
              class="container-fluid rated">
               <h4 class="row">
                 ~ survey.name ~
