--- a/platforms/ios/www/template/partner.html
+++ b/platforms/ios/www/template/partner.html
@@ -9,7 +9,7 @@
         novalidate>
     <div class="partner-wrap">
         <img ng-if="partner.avatar"
-             ng-src="http://188.226.184.59~partner.avatar~" align="middle" class="partner-img"/>
+             ng-src="~baseURL.BASE + partner.avatar~" align="middle" class="partner-img"/>
         <div class="partner-details">
             <h3>~ partner.name ~</h3>
             <h5>~ partner.category ~</h5>
