--- a/platforms/ios/www/template/profile.html
+++ b/platforms/ios/www/template/profile.html
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col-xs-6">
         <br>
-    	<img ng-src="~ 'http://event.congresso.no' + user.avatar ~" align="middle" width="100%" class="profile-img">
+    	<img ng-src="~ baseURL.BASE + user.avatar ~" align="middle" width="100%" class="profile-img">
     </div>
     <div class="col-xs-6 relative">
         <h3>~ participient.first_name ~</h3>
