--- a/platforms/ios/www/css/less/elements.less
+++ b/platforms/ios/www/css/less/elements.less
@@ -174,7 +174,9 @@
 			background-position: 97% center;
 			background-size: 1em auto;
 			&.rated {
-				background: url('../img/checked-checkbox-m.png') no-repeat 97% center;
+				background-image: url('../img/checked-checkbox-m.png');
+				background-position: 97.3% center;
+				background-size: 1.6em auto;
 			}
 		}
 	}
