--- a/platforms/ios/www/template/partners.html
+++ b/platforms/ios/www/template/partners.html
@@ -14,7 +14,7 @@
             ~ partner.name ~
           </h4>
           <p class="row event-time">
-            ~ partner.category ~
+            ~ partner.category ~&nbsp;
           </p>
         </a>
       </li>
